@@ -19,7 +19,6 @@ group 'com.fredboat'
 version '0.1'
 
 apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'kotlin'
 apply plugin: "kotlin-spring"
 apply plugin: "maven"
@@ -36,10 +35,19 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-repositories {
-    mavenCentral()
-    jcenter()
-    maven { url 'https://dl.bintray.com/palantir/releases' }
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url 'https://dl.bintray.com/palantir/releases' }
+    }
+
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
 }
 
 ext {
@@ -57,70 +65,6 @@ ext {
     mockitoVersion              = '2.+'
 }
 
-dependencies {
-    compile project(":sentinel-shared")
-    compile "net.dv8tion:JDA:$jdaVersion"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile "org.springframework.boot:spring-boot-starter-web:$bootVersion"
-    compile "org.springframework.amqp:spring-rabbit:$amqpVersion"
-    compile "com.google.code.gson:gson:$gsonVersion"
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonKotlinVersion"
-    compile "ch.qos.logback:logback-classic:$logbackVersion"
-
-    compile group: 'io.prometheus', name: 'simpleclient', version: prometheusClientVersion
-    compile group: 'io.prometheus', name: 'simpleclient_hotspot', version: prometheusClientVersion
-    compile group: 'io.prometheus', name: 'simpleclient_logback', version: prometheusClientVersion
-    compile group: 'io.prometheus', name: 'simpleclient_guava', version: prometheusClientVersion
-
-    //tests
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitVersion
-    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitVersion
-    // To avoid compiler warnings about @API annotations in JUnit code.
-    testCompileOnly group: 'org.apiguardian', name: 'apiguardian-api', version: apiGuardianVersion
-    //required for the docker compose rule https://github.com/palantir/docker-compose-rule/issues/224
-    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-migrationsupport', version: junitVersion
-    //allows us to fire up docker containers to test with, for example our postgres database
-    testCompile group: 'com.palantir.docker.compose', name: 'docker-compose-rule-junit4', version: dockerComposeRuleVersion
-    testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
-}
-
-bootRun {
-    //compiling tests during bootRun increases the likelyhood of catching broken tests locally instead of on the CI
-    dependsOn compileTestJava
-
-    //pass in custom jvm args
-    // source: https://stackoverflow.com/a/25079415
-    // example: ./gradlew bootRun -PjvmArgs="--illegal-access=debug -Dwhatever=value"
-    if (project.hasProperty('jvmArgs')) {
-        jvmArgs project.jvmArgs.split('\\s+')
-    }
-}
-
-bootJar {
-    archiveName = "sentinel.jar"
-    doLast {
-        //copies the jar into a place where the Dockerfile can find it easily (and users maybe too)
-        copy {
-            from 'build/libs/sentinel.jar'
-            into '.'
-        }
-
-        // For publishing
-        copy {
-            from 'build/libs/sentinel.jar'
-            into 'build/libs'
-            rename {"sentinel-${rootProject.version}.jar"}
-        }
-    }
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
 task wrapper(type: Wrapper) {
     gradleVersion = '4.7'
     //noinspection UnnecessaryQualifiedReference
@@ -133,14 +77,8 @@ void versionTxt() {
 }
 
 versionTxt()
-test {
-    useJUnitPlatform()
-    testLogging {
-        events "passed", "skipped", "failed"
-    }
-}
 
-publishToMavenLocal.dependsOn jar
+//publishToMavenLocal.dependsOn jar
 
 /*
 // called by jitpack
